FEAT - Criação de um painel de qualidade em tempo real
